<resources>
  <string name="app_name">ScaleScroller</string>
  <string name="title_activity_fullscreen">FullscreenActivity</string>
  <string name="scalescroller_with_notes">♪ ScaleScroller ♪</string>
  <string name="continue_as_guest">Continue as Guest</string>
  <string name="playing_as">playing as:\n%s</string>
  <string name="learn_mode">Learn Mode</string>
  <string name="challenge_mode">Challenge Mode</string>
  <string name="settings_high_scores">Settings/High Scores</string>
  <string name="login_failure_message">Unable to sign in with the provided credentials</string>
  <string name="audio_settings">Audio Settings</string>
  <string name="change_speed">Change Speed (Learn Mode)</string>
  <string name="high_scores_button">High Scores (Challenge Mode)</string>
  <string name="select_a_scale">Select a Scale</string>
  <string name="logout">logout</string>

  <string name="placeholder_for_hearts">%s lives left!</string>
  <string name="score_format">%06d</string>
  <string name="scale_title_format">%s %s</string>
  <string name="scale_dialog_format">%1$s %2$s has these notes:\n%3$s</string>

  <string name="congratulations_learn">Congratulations! You won the level!</string>
  <string name="failure_learn">Sorry, you lost the level. Try again next time.</string>
  <string name="congratulations_challenge">Congratulations! Your score was %06d.</string>
  <string name="scale_select_error">Pass previous scale levels first.</string>
  <string name="level_paused">Level paused</string>
  <string name="return_to_title">Return to title</string>
  <string name="resume">Resume</string>
  <string name="high_scores">High scores</string>
  <string name="speed_pref_summary">A slower speed will make the sidescroller easier in learn mode, while a faster speed will make it more challenging. This setting has no effect on Challenge mode.</string>
  <string name="speed_pref_title">Scroller Speed</string>
  <string name="audio_toggle_key">audio_toggle_key</string>
  <string name="speed_pref_key">speed_pref_key</string>
  <string name="volume_slider_key">volume_slider_key</string>
  <string name="pref_back_button">back_button</string>
  <string name="audio_settings_title">Audio Settings</string>
  <string name="speed_settings_title">Speed Settings</string>
  <string name="no_scores">No scores to display</string>
  <string name="c_major_scale_notes">CEDFGABC</string>
  <string name="placeholder_note_names">\n (These notes may currently be incorrect, click on F# and C for correct notes, Bb for incorrect.)</string>

</resources>