<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:id="@+id/settings_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/settings_high_scores"
    android:textSize="50sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <LinearLayout
    android:id="@+id/settings_buttons"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/settings_title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <!--  work to make buttons the right size-->
    <Button
      android:id="@+id/audio_settings_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/audio_settings"
      android:padding="8dp"
      android:textColor="@color/colorPrimary"
      android:textAllCaps="false"/>

    <Button
      android:id="@+id/change_speed_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/change_speed"
      android:padding="8dp"
      android:textColor="@color/colorPrimary"
      android:textAllCaps="false"/>

    <Button
      android:id="@+id/high_scores_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/high_scores"
      android:padding="8dp"
      android:textColor="@color/colorPrimary"
      android:textAllCaps="false"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>