<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/level_paused"
    android:textSize="@dimen/large_text_size"
    android:layout_margin="@dimen/standard_margin"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/return_button"/>

  <Button
    android:id="@+id/return_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/return_to_title"
    android:textColor="@color/colorPrimary"
    android:background="@color/textColor"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/resume_button"
    app:layout_constraintBottom_toBottomOf="parent"/>

  <Button
    android:id="@+id/resume_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/resume"
    android:textColor="@color/colorPrimary"
    android:background="@color/textColor"
    app:layout_constraintStart_toEndOf="@id/return_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>