<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@color/colorPrimary"
  tools:context=".controller.TitleFragment"
  android:orientation="horizontal">

  <TextView
    android:id="@+id/playing_as"
    android:layout_width="@dimen/small_text_view_width"
    android:layout_height="wrap_content"
    android:text="@string/playing_as"
    android:padding="@dimen/standard_padding"
    android:textSize="@dimen/small_text_size"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/logout_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/logout"
    android:padding="@dimen/standard_padding"
    android:textColor="@color/colorPrimary"
    android:textSize="@dimen/small_text_size"
    android:backgroundTint="@color/textColor"
    android:textAllCaps="false"
    android:layout_margin="@dimen/standard_margin"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:cornerRadius="@dimen/standard_corner_radius"/>

  <TextView
    android:id="@+id/main_screen_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/button_layout"
    android:padding="@dimen/standard_padding"
    android:keepScreenOn="true"
    android:text="@string/scalescroller_with_notes"
    android:textSize="@dimen/title_text_size"/>

  <androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/button_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/main_screen_title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/learn_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/learn_mode"
      android:textSize="@dimen/medium_text_size"
      android:textAllCaps="false"
      android:textColor="@color/colorPrimary"
      android:backgroundTint="@color/textColor"
      android:padding="@dimen/large_padding"
      android:layout_gravity="center_horizontal"
      android:layout_marginVertical="@dimen/standard_margin"
      app:cornerRadius="@dimen/standard_corner_radius"/>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/challenge_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/challenge_mode"
      android:textSize="@dimen/medium_text_size"
      android:textAllCaps="false"
      android:textColor="@color/colorPrimary"
      android:backgroundTint="@color/textColor"
      android:padding="@dimen/large_padding"
      android:layout_gravity="center_horizontal"
      android:layout_marginVertical="@dimen/standard_margin"
      app:cornerRadius="@dimen/standard_corner_radius"/>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/settings_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/settings_high_scores"
      android:textSize="@dimen/medium_text_size"
      android:textAllCaps="false"
      android:textColor="@color/colorPrimary"
      android:backgroundTint="@color/textColor"
      android:padding="@dimen/large_padding"
      android:layout_gravity="center_horizontal"
      android:layout_marginVertical="@dimen/standard_margin"
      app:cornerRadius="@dimen/standard_corner_radius"/>

  </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>