<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@id/navigation_title">

  <fragment
    android:id="@+id/navigation_title"
    android:label="@string/scalescroller_with_notes"
    android:name="edu.cnm.deepdive.scalescroller.controller.TitleFragment"
    tools:layout="@layout/fragment_title">

    <action
      android:id="@+id/open_scale_select"
      app:destination="@id/navigation_scale_select"/>

    <action
      android:id="@+id/open_challenge_mode_game"
      app:destination="@+id/navigation_game">
      <argument
        android:name="game_mode"
        app:argType="edu.cnm.deepdive.scalescroller.controller.GameFragment$GameMode"
        android:defaultValue="CHALLENGE"/>
    </action>

    <action
      android:id="@+id/open_settings"
      app:destination="@id/navigation_settings"/>

  </fragment>

  <fragment
    android:id="@+id/navigation_settings"
    android:label="@string/settings_high_scores"
    android:name="edu.cnm.deepdive.scalescroller.controller.SettingsFragment"
    tools:layout="@layout/fragment_settings"/>

  <fragment
    android:id="@+id/navigation_scale_select"
    android:label="@string/select_a_scale"
    android:name="edu.cnm.deepdive.scalescroller.controller.ScaleSelectFragment"
    tools:layout="@layout/fragment_scale_select">

    <action
      android:id="@+id/open_learn_mode_game"
      app:destination="@id/navigation_game">

      <argument
        android:name="tonic"
        app:argType="edu.cnm.deepdive.scalescroller.model.entity.Note"/>

      <argument
        android:name="mode"
        app:argType="edu.cnm.deepdive.scalescroller.model.entity.Mode"/>

    </action>

  </fragment>

  <fragment
    android:id="@+id/navigation_game"
    android:label="@string/app_name"
    android:name="edu.cnm.deepdive.scalescroller.controller.GameFragment"
    tools:layout="@layout/fragment_game">

    <!--    TODO figure out how to pass in these arguments correctly in the java classes-->
    <argument
      android:name="game_mode"
      app:argType="edu.cnm.deepdive.scalescroller.controller.GameFragment$GameMode"
      android:defaultValue="LEARN"
      />

    <argument
      android:name="tonic"
      app:argType="edu.cnm.deepdive.scalescroller.model.entity.Note"
      android:defaultValue="C"/>

    <argument
      android:name="mode"
      app:argType="edu.cnm.deepdive.scalescroller.model.entity.Mode"
      android:defaultValue="MAJOR"
      />


  </fragment>

</navigation>